--- a/laborator04/PhoneDialer/app/src/main/res/values/strings.xml
+++ b/laborator04/PhoneDialer/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Phone Dialer</string>
+    <string name="phone_error">No number provided</string>
 </resources>
